try increasing RAM for the gradle tests